LU-6075 osd: race for check/chance od_dirent_journal

Originally, the osd_device::od_dirent_journal was a bit variable,
changing such variable can happen when other is changing other bit
that is in the same integer in parallel. Because there is no lock
protection when change the bits, one thread changing may overwrite
others. So split the osd_device::od_dirent_journal as independent
boolean variable.

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: I859932290ebf3b94be4f588f8e3e9635fe204d49