lustre/osd-ldiskfs/osd_internal.h
@@ -234,7 +234,6 @@ struct osd_device {
 	unsigned int              od_fl_capa:1,
 				  od_maybe_new:1,
 				  od_noscrub:1,
-				  od_dirent_journal:1,
 				  od_igif_inoi:1,
 				  od_check_ff:1,
 				  od_is_ost:1,
@@ -242,6 +241,7 @@ struct osd_device {
 
         unsigned long             od_capa_timeout;
         __u32                     od_capa_alg;
+	bool			  od_dirent_journal;
         struct lustre_capa_key   *od_capa_keys;
 	struct hlist_head	 *od_capa_hash;
 
